engine/tests/detection_corpus/bad/sqli_concat_java.java
String q = "UPDATE accounts SET balance = balance - " + amount;
